--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     <section class="section--scroller">
         <div class="container--general">
-            <div class="scroller flex--center-items">
+            <div id="scroller" class="scroller flex--center-items">
                 <img id="scroller_img_left" src="./images/scroller_img_2.jpg" alt="">
                 <img id="scroller_img_center" src="./images/scroller_img_1.jpg" alt="">
                 <img id="scroller_img_right" src="./images/scroller_img_3.jpg" alt="">
