Some progress on index page

--- a/gallery.html
+++ b/gallery.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/gallery.css">
 </head>
 <body>
     <section class="section--general">
         <div class="container--general container--navbar">
             <div class="navbar__items">
-                <img class="item--navbar--logo" src="./images/logo.png" alt="">
+                <a href="./index.html" class="item--navbar--logo">
+                    <img src="./images/logo.JPG" alt="">
+                </a>
                 
                 <div class="navbar__items__menu">
                     <a href="./index.html" class="item--navbar--button">HOME</a>
@@ -22,7 +24,7 @@
         </div>
     </section>
 
-    <section class="section--general">
+    <section class="section--general section--gallery">
         <div class="container--general container--gallery">
             <div class="gallery__items">
                 <div class="gallery-subsection">
