added scrolling to blogs on index page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     </section>
     
     <section class="section--general section--new-blogs">
-        <div class="container--general">
+        <div class="container--general flex--center-items">
+            <img id="left-arrow-blogs" class="nav-arrow" src="./images/left_arrow.png" alt="">
             <div id="new-blogs" class="new-blogs">
                 <div class="item--new-blog">
                     <img src="./images/scroller_img_1.jpg" alt="">
@@ -44,7 +45,13 @@
                     </div>
                 </div>
                 <div class="item--new-blog">
-                    <img src="./images/scroller_img_1.jpg" alt="">
+                    <img src="./images/scroller_img_2.jpg" alt="">
+                    <div class="new-blog-title">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, error?
+                    </div>
+                </div>
+                <div class="item--new-blog">
+                    <img src="./images/scroller_img_3.jpg" alt="">
                     <div class="new-blog-title">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, error?
                     </div>
@@ -56,24 +63,19 @@
                     </div>
                 </div>
                 <div class="item--new-blog">
-                    <img src="./images/scroller_img_1.jpg" alt="">
+                    <img src="./images/scroller_img_2.jpg" alt="">
                     <div class="new-blog-title">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, error?
                     </div>
                 </div>
                 <div class="item--new-blog">
-                    <img src="./images/scroller_img_1.jpg" alt="">
-                    <div class="new-blog-title">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, error?
-                    </div>
-                </div>
-                <div class="item--new-blog">
-                    <img src="./images/scroller_img_1.jpg" alt="">
+                    <img src="./images/scroller_img_3.jpg" alt="">
                     <div class="new-blog-title">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, error?
                     </div>
                 </div>
             </div>
+            <img id="right-arrow-blogs" class="nav-arrow" src="./images/right_arrow.png" alt="">
             
         </div>
     </section>
