--- a/gallery.html
+++ b/gallery.html
@@ -26,10 +26,28 @@
 
     <section class="section--general section--gallery">
         <div class="container--general container--gallery">
+            <div class="gallery__titles">
+                <div id="gallery-title-cakes" class="gallery-title">
+                    Cakes
+                </div>
+                <div id="gallery-title-decor" class="gallery-title">
+                    Decor
+                </div>
+                <div id="gallery-title-cookies" class="gallery-title">
+                    Cookies
+                </div>
+
+            </div>
             <div class="gallery__items">
-                <div class="gallery-subsection">
-                    <div class="gallery-logo">
-                        Cakes
+                <div id="subsection-cakes" class="gallery-subsection">
+                    <div class="gallery-card">
+                        <img src="./images/scroller_img_1.jpg" alt="">
+                    </div>
+                    <div class="gallery-card">
+                        <img src="./images/scroller_img_1.jpg" alt="">
+                    </div>
+                    <div class="gallery-card">
+                        <img src="./images/scroller_img_1.jpg" alt="">
                     </div>
                     <div class="gallery-card">
                         <img src="./images/scroller_img_1.jpg" alt="">
@@ -42,18 +60,15 @@
                     </div>
                 </div>
 
-                <div class="gallery-subsection">
-                    <div class="gallery-logo">
-                        Decor
+                <div id="subsection-decor" class="gallery-subsection">
+                    <div class="gallery-card">
+                        <img src="./images/scroller_img_2.jpg" alt="">
                     </div>
                 </div>
 
-                <div class="gallery-subsection">
-                    <div class="gallery-logo">
-                        Cookies
-                    </div>
+                <div id="subsection-cookies" class="gallery-subsection">
                     <div class="gallery-card">
-                        <img src="./images/scroller_img_1.jpg" alt="">
+                        <img src="./images/scroller_img_3.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -62,4 +77,5 @@
     
     
 </body>
+<script type="module" src="./scripts/gallery_script.js"></script>
 </html>
