--- a/index.html
+++ b/index.html
@@ -81,5 +81,5 @@
     </section>
     
 </body>
-<script type="module" src="./script.js"></script>
+<script type="module" src="./scripts/index_script.js"></script>
 </html>
