adding redirection in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -41,34 +41,38 @@
             <div class="gallery__items">
                 <div id="subsection-cakes" class="gallery-subsection">
                     <div class="gallery-card">
-                        <img src="./images/scroller_img_1.jpg" alt="">
+                        <img class="gallery-image" src="./images/scroller_img_1.jpg" alt="">
+                        <img class="redirect-image" src="./images/redirect.png" alt="">
                     </div>
                     <div class="gallery-card">
-                        <img src="./images/scroller_img_1.jpg" alt="">
+                        <img class="gallery-image" src="./images/scroller_img_1.jpg" alt="">
                     </div>
                     <div class="gallery-card">
-                        <img src="./images/scroller_img_1.jpg" alt="">
+                        <img class="gallery-image" src="./images/scroller_img_1.jpg" alt="">
                     </div>
                     <div class="gallery-card">
-                        <img src="./images/scroller_img_1.jpg" alt="">
+                        <img class="gallery-image" src="./images/car.jpg" alt="">
                     </div>
                     <div class="gallery-card">
-                        <img src="./images/scroller_img_1.jpg" alt="">
+                        <img class="gallery-image" src="./images/scroller_img_1.jpg" alt="">
                     </div>
                     <div class="gallery-card">
-                        <img src="./images/scroller_img_1.jpg" alt="">
+                        <img class="gallery-image" src="./images/scroller_img_1.jpg" alt="">
+                    </div>
+                    <div class="gallery-card">
+                        <img class="gallery-image" src="./images/scroller_img_1.jpg" alt="">
                     </div>
                 </div>
 
                 <div id="subsection-decor" class="gallery-subsection">
                     <div class="gallery-card">
-                        <img src="./images/scroller_img_2.jpg" alt="">
+                        <img class="gallery-image" src="./images/scroller_img_2.jpg" alt="">
                     </div>
                 </div>
 
                 <div id="subsection-cookies" class="gallery-subsection">
                     <div class="gallery-card">
-                        <img src="./images/scroller_img_3.jpg" alt="">
+                        <img class="gallery-image" src="./images/scroller_img_3.jpg" alt="">
                     </div>
                 </div>
             </div>
