--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
                 <div class="navbar__items__menu">
                     <a href="./index.html" class="item--navbar--button">HOME</a>
                     <a href="./gallery.html" class="item--navbar--button">GALLERY</a>
-                    <a href="#" class="item--navbar--button">BLOG</a>
+                    <a href="./blog.html" class="item--navbar--button">BLOG</a>
                     <a href="#" class="item--navbar--button">ABOUT</a>
                 </div>
             </div>
