minor changes + footer done

--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@
 
     
     
-    <section class="section--general">
+    <section class="section--general section--articles">
         <div class="container--general container--articles">
             <div class="article__items">
                 <div class="article-card">
@@ -82,7 +82,91 @@
                             <p>2:09 AM · May 6, 2014</p>
                         </div>
                         <a class="article-title" href="/images/clock.png" target="_blank">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit..
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit ssssssssssssssssssssssssssssssss
+                        </a>
+                    </div>
+                </div>
+                <div class="article-card">
+                    <img class="article-image" src="./images/car.jpg" alt="">
+                    <div class="article-info">
+                        <div class="article-date">
+                            <img class="date-logo" src="images/clock.png" alt="">
+                            <p>2:09 AM · May 6, 2014</p>
+                        </div>
+                        <a class="article-title" href="/images/clock.png" target="_blank">
+                            Lorem ipsum dolor sit
+                        </a>
+                    </div>
+                </div>
+                <div class="article-card">
+                    <img class="article-image" src="./images/car.jpg" alt="">
+                    <div class="article-info">
+                        <div class="article-date">
+                            <img class="date-logo" src="images/clock.png" alt="">
+                            <p>2:09 AM · May 6, 2014</p>
+                        </div>
+                        <a class="article-title" href="/images/clock.png" target="_blank">
+                            Lorem ipsum dolor sit
+                        </a>
+                    </div>
+                </div>
+                <div class="article-card">
+                    <img class="article-image" src="./images/car.jpg" alt="">
+                    <div class="article-info">
+                        <div class="article-date">
+                            <img class="date-logo" src="images/clock.png" alt="">
+                            <p>2:09 AM · May 6, 2014</p>
+                        </div>
+                        <a class="article-title" href="/images/clock.png" target="_blank">
+                            Lorem ipsum dolor sit
+                        </a>
+                    </div>
+                </div>
+                <div class="article-card">
+                    <img class="article-image" src="./images/car.jpg" alt="">
+                    <div class="article-info">
+                        <div class="article-date">
+                            <img class="date-logo" src="images/clock.png" alt="">
+                            <p>2:09 AM · May 6, 2014</p>
+                        </div>
+                        <a class="article-title" href="/images/clock.png" target="_blank">
+                            Lorem ipsum dolor sit
+                        </a>
+                    </div>
+                </div>
+                <div class="article-card">
+                    <img class="article-image" src="./images/car.jpg" alt="">
+                    <div class="article-info">
+                        <div class="article-date">
+                            <img class="date-logo" src="images/clock.png" alt="">
+                            <p>2:09 AM · May 6, 2014</p>
+                        </div>
+                        <a class="article-title" href="/images/clock.png" target="_blank">
+                            Lorem ipsum dolor sit
+                        </a>
+                    </div>
+                </div>
+                <div class="article-card">
+                    <img class="article-image" src="./images/scroller_img_1.jpg" alt="">
+                    <div class="article-info">
+                        <div class="article-date">
+                            <img class="date-logo" src="images/clock.png" alt="">
+                            <p>2:09 AM · May 6, 2014</p>
+                        </div>
+                        <a class="article-title" href="/images/clock.png" target="_blank">
+                            Lorem ipsum dolor sit
+                        </a>
+                    </div>
+                </div>
+                <div class="article-card">
+                    <img class="article-image" src="./images/car.jpg" alt="">
+                    <div class="article-info">
+                        <div class="article-date">
+                            <img class="date-logo" src="images/clock.png" alt="">
+                            <p>2:09 AM · May 6, 2014</p>
+                        </div>
+                        <a class="article-title" href="/images/clock.png" target="_blank">
+                            Lorem ipsum dolor sit
                         </a>
                     </div>
                 </div>
