--- a/index.html
+++ b/index.html
@@ -198,6 +198,32 @@
         </div>
     </section>
 
+    <section class="section--general section--footer">
+        <div class="container--general">
+            <footer class="footer">
+                <div class="social-links">
+                    <a href="https://twitter.com/realDonaldTrump" target="_blank">
+                        <img class="social-button" src="./images/icon_pinterest.png" alt="">
+                    </a>
+                    <a href="https://twitter.com/realDonaldTrump" target="_blank">
+                        <img class="social-button" src="./images/icon_facebook.png" alt="">
+                    </a>
+                    <a href="https://twitter.com/realDonaldTrump" target="_blank">
+                        <img class="social-button" src="./images/icon_instagram.png" alt="">
+                    </a>
+                    <a href="https://twitter.com/realDonaldTrump" target="_blank">
+                        <img class="social-button" src="./images/icon_twitter.png" alt="">
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=izGwDsrQ1eQ" target="_blank">
+                        <img class="social-button" src="./images/icon_youtube.png" alt="">
+                    </a>
+                </div>
+                <p class="copyright-text">
+                    &copy; All rights reserved
+                </p>
+            </footer>
+        </div>
+    </section>
     
 </body>
 <script type="module" src="./scripts/index_script.js"></script>
