article page and auto scroll to top added

--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
                                 <a class="redirect-image" href="./images/scroller_img_1.jpg" target="_blank">
                                     <img class="redirect-image" src="./images/redirect_image.png" alt="">
                                 </a>
-                                <a class="redirect-image" href="./images/scroller_img_1.jpg" target="_blank">
+                                <a class="redirect-image" href="./article.html" target="_blank">
                                     <img class="redirect-image" src="./images/redirect_blog.png" alt="">
                                 </a>
                             </div>
