--- a/index.html
+++ b/index.html
@@ -221,12 +221,14 @@
                 <p class="copyright-text">
                     &copy; All rights reserved
                 </p>
+                <img class="back-to-top-button" id="back-to-top-button" src="./images/back-to-top.png" alt="">
             </footer>
         </div>
     </section>
     
 </body>
 <script type="module" src="./scripts/index_script.js"></script>
+<script type="module" src="./scripts/general_functions_script.js"></script>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </html>
