Added blog fetching on index page

--- a/WebFinalApp/WebFinalApp/wwwroot/index.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/index.html
@@ -50,16 +50,16 @@
         <div class="container--general flex--center-items">
             <img id="left-arrow-blogs" class="nav-arrow" src="./images/left_arrow.png" alt="">
             <div id="new-blogs" class="content-scroll">
-                <div class="item--new-blog">
+                <!--<div class="item--new-blog">
                     <img src="./images/scroller_img_1.jpg" alt="">
                     <div class="new-blog-title">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, error?
                     </div>
                 </div>
                 <div class="item--new-blog">
-                    <img src="./images/scroller_img_2.jpg" alt="">
+                    <img src="./images/BlogImages/img2.jpg" alt="">
                     <div class="new-blog-title">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, error?
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     </div>
                 </div>
                 <div class="item--new-blog">
@@ -85,7 +85,7 @@
                     <div class="new-blog-title">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, error?
                     </div>
-                </div>
+                </div>-->
             </div>
             <img id="right-arrow-blogs" class="nav-arrow" src="./images/right_arrow.png" alt="">
 
