--- a/WebFinalApp/WebFinalApp/wwwroot/gallery.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/gallery.html
@@ -1,29 +1,4 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style/gallery.css">
-</head>
-<body>
-    <section class="section--general">
-        <div class="container--general container--navbar">
-            <div class="navbar__items">
-                <a href="./index.html" class="item--navbar--logo">
-                    <img src="./images/logo.JPG" alt="">
-                </a>
-
-                <div class="navbar__items__menu">
-                    <a href="./index.html" class="item--navbar--button">HOME</a>
-                    <a href="./gallery.html" class="item--navbar--button">GALLERY</a>
-                    <a href="./blog.html" class="item--navbar--button">BLOG</a>
-                    <a href="#" class="item--navbar--button">ABOUT</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
+﻿
     <section class="section--general section--gallery">
         <div class="container--general container--gallery">
             <div class="gallery__titles">
@@ -46,7 +21,7 @@
                                 <a class="redirect-image" href="./images/scroller_img_1.jpg" target="_blank">
                                     <img class="redirect-image" src="./images/redirect_image.png" alt="">
                                 </a>
-                                <a class="redirect-image" href="./article.html" target="_blank">
+                                <a class="redirect-image" href="./article" target="_blank">
                                     <img class="redirect-image" src="./images/redirect_blog.png" alt="">
                                 </a>
                             </div>
@@ -169,5 +144,4 @@
     </section>
 
     <script type="module" src="./scripts/gallery_script.js"></script>
-</body>
-</html>
+    <link rel="stylesheet" href="./style/gallery.css">
