Change routing for true SPA

--- a/WebFinalApp/WebFinalApp/wwwroot/app.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/app.html
@@ -15,9 +15,9 @@
                 </a>
 
                 <div class="navbar__items__menu">
-                    <a href="./index" class="item--navbar--button">HOME</a>
-                    <a href="./gallery" class="item--navbar--button">GALLERY</a>
-                    <a href="./blog" class="item--navbar--button">BLOG</a>
+                    <a onclick="goTo('/index', 'index')" class="item--navbar--button">HOME</a>
+                    <a onclick="goTo('/gallery', 'gallery')" class="item--navbar--button">GALLERY</a>
+                    <a onclick="goTo('/blog', 'blog')" class="item--navbar--button">BLOG</a>
                     <a href="#" class="item--navbar--button">ABOUT</a>
                 </div>
             </div>
@@ -55,7 +55,7 @@
     </section>
 
     <script type="module" src="./scripts/shared.js"></script>
-    <script type="module" src="./scripts/router.js"></script>
+    <script type="text/javascript" src="./scripts/router.js"></script>
 </body>
 
 </html>
