--- a/WebFinalApp/WebFinalApp/wwwroot/index.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/index.html
@@ -138,6 +138,6 @@
     </div>
 </section>
 
-<script type="module" src="./scripts/index_script.js"></script>
+<script type="text/javascript" src="./scripts/index_script.js"></script>
 <link rel="stylesheet" href="./style/index.css">
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
