Gallery infinite scroll done

--- a/WebFinalApp/WebFinalApp/wwwroot/gallery.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/gallery.html
@@ -12,136 +12,17 @@
                     Cookies
                 </div>
             </div>
-            <div class="gallery__items">
-                <div id="subsection-cakes" class="gallery-subsection">
-                    <div class="gallery-card">
-                        <div class="card-content">
-                            <img class="gallery-image" src="./images/scroller_img_1.jpg" alt="">
-                            <div class="redirections">
-                                <a class="redirect-image" href="./images/scroller_img_1.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_image.png" alt="">
-                                </a>
-                                <a class="redirect-image" href="./article" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_blog.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+            <div id="gallery__items" class="gallery__items">
+                <div id="subsection-cakes" class="gallery-subsection"></div>
 
-                    <div class="gallery-card">
-                        <div class="card-content">
-                            <img class="gallery-image" src="./images/scroller_img_1.jpg" alt="">
-                            <div class="redirections">
-                                <a class="redirect-image" href="./images/scroller_img_1.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_image.png" alt="">
-                                </a>
-                                <a class="redirect-image" href="./images/scroller_img_1.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_blog.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="gallery-card">
-                        <div class="card-content">
-                            <img class="gallery-image" src="./images/car.jpg" alt="">
-                            <div class="redirections">
-                                <a class="redirect-image" href="./images/car.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_image.png" alt="">
-                                </a>
-                                <a class="redirect-image" href="./images/car.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_blog.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="gallery-card">
-                        <div class="card-content">
-                            <img class="gallery-image" src="./images/scroller_img_1.jpg" alt="">
-                            <div class="redirections">
-                                <a class="redirect-image" href="./images/scroller_img_1.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_image.png" alt="">
-                                </a>
-                                <a class="redirect-image" href="./images/scroller_img_1.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_blog.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="gallery-card">
-                        <div class="card-content">
-                            <img class="gallery-image" src="./images/scroller_img_1.jpg" alt="">
-                            <div class="redirections">
-                                <a class="redirect-image" href="./images/scroller_img_1.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_image.png" alt="">
-                                </a>
-                                <a class="redirect-image" href="./images/scroller_img_1.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_blog.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div id="subsection-decor" class="gallery-subsection"></div>
 
-                <div id="subsection-decor" class="gallery-subsection">
-                    <div class="gallery-card">
-                        <div class="card-content">
-                            <img class="gallery-image" src="./images/scroller_img_2.jpg" alt="">
-                            <div class="redirections">
-                                <a class="redirect-image" href="./images/scroller_img_2.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_image.png" alt="">
-                                </a>
-                                <a class="redirect-image" href="./images/scroller_img_2.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_blog.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="gallery-card">
-                        <div class="card-content">
-                            <img class="gallery-image" src="./images/car.jpg" alt="">
-                            <div class="redirections">
-                                <a class="redirect-image" href="./images/car.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_image.png" alt="">
-                                </a>
-                                <a class="redirect-image" href="./images/car.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_blog.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="gallery-card">
-                        <div class="card-content">
-                            <img class="gallery-image" src="./images/scroller_img_2.jpg" alt="">
-                            <div class="redirections">
-                                <a class="redirect-image" href="./images/scroller_img_2.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_image.png" alt="">
-                                </a>
-                                <a class="redirect-image" href="./images/scroller_img_2.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_blog.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="subsection-cookies" class="gallery-subsection">
-                    <div class="gallery-card">
-                        <div class="card-content">
-                            <img class="gallery-image" src="./images/scroller_img_3.jpg" alt="">
-                            <div class="redirections">
-                                <a class="redirect-image" href="./images/scroller_img_3.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_image.png" alt="">
-                                </a>
-                                <a class="redirect-image" href="./images/scroller_img_3.jpg" target="_blank">
-                                    <img class="redirect-image" src="./images/redirect_blog.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div id="subsection-cookies" class="gallery-subsection"></div>
             </div>
         </div>
     </section>
+    
+    <style rel="stylesheet" id="dynamic_style"></style>
 
     <script type="module" src="./scripts/gallery_script.js"></script>
     <link rel="stylesheet" href="./style/gallery.css">
