Actually finished gallery load

--- a/WebFinalApp/WebFinalApp/wwwroot/app.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/app.html
@@ -10,7 +10,7 @@
     <section class="section--general">
         <div class="container--general container--navbar">
             <div class="navbar__items">
-                <a href="./index" class="item--navbar--logo">
+                <a onclick="goTo('/index', 'index')" class="item--navbar--logo">
                     <img src="./images/logo.JPG" alt="">
                 </a>
 
@@ -54,8 +54,7 @@
         </div>
     </section>
 
-    <script type="module" src="./scripts/shared.js"></script>
-    <script type="text/javascript" src="./scripts/router.js"></script>
+    <script type="module" src="./scripts/router.js"></script>
 </body>
 
 </html>
