Adds tag filtering to gallery

--- a/WebFinalApp/WebFinalApp/wwwroot/gallery.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/gallery.html
@@ -1,4 +1,16 @@
 ﻿
+    <section class="section--general">
+        <div class="container--general">
+            <div id="gallery_filter" class="gallery_filter">
+                <div class="filter_input">
+                    <input type="text" placeholder="Add tags to filter images..." id="tag_input_text" name="tag_input">
+                    <input type="submit" id="tag_input_button" value="Add tags">
+                </div>
+                <div id="filter_tags" class="filter_tags"></div>
+            </div>
+        </div>
+    </section>
+
     <section class="section--general section--gallery">
         <div class="container--general container--gallery">
             <div class="gallery__titles">
