Added blog page, fixed all request paths

--- a/WebFinalApp/WebFinalApp/wwwroot/app.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/app.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style/shared.css">
+    <link rel="stylesheet" href="/style/shared.css">
 </head>
 <body>
     <section class="section--general">
         <div class="container--general container--navbar">
             <div class="navbar__items">
                 <a onclick="goTo('/index', 'index')" class="item--navbar--logo">
-                    <img src="./images/logo.JPG" alt="">
+                    <img src="/images/logo.JPG" alt="">
                 </a>
 
                 <div class="navbar__items__menu">
@@ -31,30 +31,30 @@
             <footer class="footer">
                 <div class="social-links">
                     <a href="https://twitter.com/realDonaldTrump" target="_blank">
-                        <img class="social-button" src="./images/SocIcons/icon_pinterest.png" alt="">
+                        <img class="social-button" src="/images/SocIcons/icon_pinterest.png" alt="">
                     </a>
                     <a href="https://twitter.com/realDonaldTrump" target="_blank">
-                        <img class="social-button" src="./images/SocIcons/icon_facebook.png" alt="">
+                        <img class="social-button" src="/images/SocIcons/icon_facebook.png" alt="">
                     </a>
                     <a href="https://twitter.com/realDonaldTrump" target="_blank">
-                        <img class="social-button" src="./images/SocIcons/icon_instagram.png" alt="">
+                        <img class="social-button" src="/images/SocIcons/icon_instagram.png" alt="">
                     </a>
                     <a href="https://twitter.com/realDonaldTrump" target="_blank">
-                        <img class="social-button" src="./images/SocIcons/icon_twitter.png" alt="">
+                        <img class="social-button" src="/images/SocIcons/icon_twitter.png" alt="">
                     </a>
                     <a href="https://www.youtube.com/watch?v=izGwDsrQ1eQ" target="_blank">
-                        <img class="social-button" src="./images/SocIcons/icon_youtube.png" alt="">
+                        <img class="social-button" src="/images/SocIcons/icon_youtube.png" alt="">
                     </a>
                 </div>
                 <p class="copyright-text">
                     &copy; All rights reserved
                 </p>
-                <img class="back-to-top-button" id="back-to-top-button" src="./images/back-to-top.png" alt="">
+                <img class="back-to-top-button" id="back-to-top-button" src="/images/back-to-top.png" alt="">
             </footer>
         </div>
     </section>
 
-    <script type="module" src="./scripts/router.js"></script>
+    <script type="module" src="/scripts/router.js"></script>
 </body>
 
 </html>
