--- a/WebFinalApp/WebFinalApp/wwwroot/article.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/article.html
@@ -2,12 +2,10 @@
     <section class="section--general section--title">
         <div class="container--general">
             <div class="title">
-                <h1>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae consequatur voluptates consectetur, veritatis iste pariatur aut hic ipsam repellendus earum?
-                </h1>
+                <h1 id="article_title"></h1>
             </div>
             <div class="date">
-                <p class="date-text">2:09 AM · May 6, 2014</p>
+                <p id="date-text" class="date-text"></p>
             </div>
             
         </div>
@@ -15,23 +13,8 @@
 
     <section class="section--general section--article">
         <div class="container--general">
-            <div class="article-items">
-                <img class="main-image" src="./images/scroller_img_1.jpg" alt="">
-                <div class="article-content">
-                    <p>
-                        &emsp;Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae quisquam enim impedit! Eos architecto, reiciendis fugiat non vero numquam laudantium perspiciatis ratione ea optio expedita quibusdam atque nostrum rem nulla quod. Minima voluptas quam modi. Alias provident dicta ut nam similique iure omnis enim dolorem voluptatibus excepturi corrupti labore repellat, eius optio, dolor a sunt doloremque porro. Praesentium consequatur quibusdam corrupti nobis doloremque magni delectus aliquid atque facere beatae voluptate nisi dolor nemo repellat molestiae incidunt sed neque natus fugit, assumenda est quis fuga a nihil. Vitae ad impedit, sit cumque dolores, delectus doloribus quae distinctio laudantium similique earum? Nemo.
-                    </p>
-                    <br>
-                    <center>
-                        <img src="./images/scroller_img_3.jpg" alt="">
-                    </center>
-                    <br>
-                    <p>
-                        &emsp;Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae quisquam enim impedit! Eos architecto, reiciendis fugiat non vero numquam laudantium perspiciatis ratione ea optio expedita quibusdam atque nostrum rem nulla quod. Minima voluptas quam modi. Alias provident dicta ut nam similique iure omnis enim dolorem voluptatibus excepturi corrupti labore repellat, eius optio, dolor a sunt doloremque porro. Praesentium consequatur quibusdam corrupti nobis doloremque magni delectus aliquid atque facere beatae voluptate nisi dolor nemo repellat molestiae incidunt sed neque natus fugit, assumenda est quis fuga a nihil. Vitae ad impedit, sit cumque dolores, delectus doloribus quae distinctio laudantium similique earum? Nemo.
-                    </p>
-                </div>
-            </div>
+            <div id="article-items" class="article-items"></div>
         </div>
     </section>
 
-    <link rel="stylesheet" href="./style/article.css">
+    <link rel="stylesheet" href="/style/article.css">
