--- a/WebFinalApp/WebFinalApp/wwwroot/blogs.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/blogs.html
@@ -15,4 +15,4 @@
         </div>
     </section>
 
-    <link rel="stylesheet" href="./style/blogs.css">
+    <link rel="stylesheet" href="/style/blogs.css">
