--- a/WebFinalApp/WebFinalApp/wwwroot/gallery.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/gallery.html
@@ -35,4 +35,4 @@
     </section>
     
     <style rel="stylesheet" id="dynamic_style"></style>
-    <link rel="stylesheet" href="./style/gallery.css">
+    <link rel="stylesheet" href="/style/gallery.css">
