--- a/WebFinalApp/WebFinalApp/wwwroot/index.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/index.html
@@ -2,9 +2,9 @@
 <section class="section--scroller section--general">
     <div class="container--general container--scroller">
         <div id="scroller" class="scroller flex--center-items">
-            <img id="scroller_img_left" src="./images/scroller_img_2.jpg" alt="">
-            <img id="scroller_img_center" src="./images/scroller_img_1.jpg" alt="">
-            <img id="scroller_img_right" src="./images/scroller_img_3.jpg" alt="">
+            <img id="scroller_img_left" src="/images/scroller_img_2.jpg" alt="">
+            <img id="scroller_img_center" src="/images/scroller_img_1.jpg" alt="">
+            <img id="scroller_img_right" src="/images/scroller_img_3.jpg" alt="">
         </div>
     </div>
 </section>
@@ -23,11 +23,11 @@
 
 <section class="section--general section--content-scroll">
     <div class="container--general flex--center-items">
-        <img id="left-arrow-blogs" class="nav-arrow" src="./images/left_arrow.png" alt="">
+        <img id="left-arrow-blogs" class="nav-arrow" src="/images/left_arrow.png" alt="">
 
         <div id="new-blogs" class="content-scroll"></div>
 
-        <img id="right-arrow-blogs" class="nav-arrow" src="./images/right_arrow.png" alt="">
+        <img id="right-arrow-blogs" class="nav-arrow" src="/images/right_arrow.png" alt="">
 
     </div>
 </section>
@@ -46,13 +46,13 @@
 
 <section class="section--general section--content-scroll">
     <div class="container--general flex--center-items">
-        <img id="left-arrow-tweets" class="nav-arrow" src="./images/left_arrow.png" alt="">
+        <img id="left-arrow-tweets" class="nav-arrow" src="/images/left_arrow.png" alt="">
         <div id="new-tweets" class="content-scroll">
             <div class="twitter-tweet">
                 <a class="tweet-link" target="_blank" href="https://twitter.com/realDonaldTrump/status/1330732289018503170"></a>
                 <div class="tweet-body">
                     <div class="tweet-user">
-                        <img class="user-image" src="./images/scroller_img_1.jpg" alt="">
+                        <img class="user-image" src="/images/scroller_img_1.jpg" alt="">
                         <div class="tweet-user-id">
                             <p>Donnie Trumpy</p>
                             <p class="user-handle">@realDonaldTrump</p>
@@ -69,7 +69,7 @@
                 <a class="tweet-link" target="_blank" href="https://twitter.com/realDonaldTrump/status/1330732289018503170"></a>
                 <div class="tweet-body">
                     <div class="tweet-user">
-                        <img class="user-image" src="./images/scroller_img_1.jpg" alt="">
+                        <img class="user-image" src="/images/scroller_img_1.jpg" alt="">
                         <div class="tweet-user-id">
                             <p>Donnie Trumpy</p>
                             <p class="user-handle">@realDonaldTrump</p>
@@ -86,7 +86,7 @@
                 <a class="tweet-link" target="_blank" href="https://twitter.com/realDonaldTrump/status/1330732289018503170"></a>
                 <div class="tweet-body">
                     <div class="tweet-user">
-                        <img class="user-image" src="./images/scroller_img_1.jpg" alt="">
+                        <img class="user-image" src="/images/scroller_img_1.jpg" alt="">
                         <div class="tweet-user-id">
                             <p>Donnie Trumpy</p>
                             <p class="user-handle">@realDonaldTrump</p>
@@ -103,7 +103,7 @@
                 <a class="tweet-link" target="_blank" href="https://twitter.com/realDonaldTrump/status/1330732289018503170"></a>
                 <div class="tweet-body">
                     <div class="tweet-user">
-                        <img class="user-image" src="./images/scroller_img_1.jpg" alt="">
+                        <img class="user-image" src="/images/scroller_img_1.jpg" alt="">
                         <div class="tweet-user-id">
                             <p>Donnie Trumpy</p>
                             <p class="user-handle">@realDonaldTrump</p>
@@ -120,7 +120,7 @@
                 <a class="tweet-link" target="_blank" href="https://twitter.com/realDonaldTrump/status/1330732289018503170"></a>
                 <div class="tweet-body">
                     <div class="tweet-user">
-                        <img class="user-image" src="./images/scroller_img_1.jpg" alt="">
+                        <img class="user-image" src="/images/scroller_img_1.jpg" alt="">
                         <div class="tweet-user-id">
                             <p>Donnie Trumpy</p>
                             <p class="user-handle">@realDonaldTrump</p>
@@ -134,9 +134,9 @@
                 </div>
             </div>
         </div>
-        <img id="right-arrow-tweets" class="nav-arrow" src="./images/right_arrow.png" alt="">
+        <img id="right-arrow-tweets" class="nav-arrow" src="/images/right_arrow.png" alt="">
     </div>
 </section>
 
-<link rel="stylesheet" href="./style/index.css">
+<link rel="stylesheet" href="/style/index.css">
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
