Adds redirect button in index scroller

--- a/WebFinalApp/WebFinalApp/wwwroot/app.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/app.html
@@ -18,7 +18,7 @@
                     <a onclick="goTo('/index', 'index')" class="item--navbar--button">HOME</a>
                     <a onclick="goTo('/gallery', 'gallery')" class="item--navbar--button">GALLERY</a>
                     <a onclick="goTo('/blogs', 'blogs')" class="item--navbar--button">BLOG</a>
-                    <a href="#" class="item--navbar--button">ABOUT</a>
+                    <a onclick="goTo('/about', 'about')" class="item--navbar--button">ABOUT</a>
                 </div>
             </div>
         </div>
