--- a/WebFinalApp/WebFinalApp/wwwroot/index.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/index.html
@@ -3,8 +3,11 @@
     <div class="container--general container--scroller">
         <div id="scroller" class="scroller flex--center-items">
             <img id="scroller_img_left" src="/images/scroller_img_2.jpg" alt="">
-            <img id="scroller_img_center" src="/images/scroller_img_1.jpg" alt="">
+            <img id="scroller_img_center" src="/images/scroller_img_1.jpg" alt="masterclass">
             <img id="scroller_img_right" src="/images/scroller_img_3.jpg" alt="">
+            <div onclick="goTo('/about#masterclass', 'about')" id="find_out_more">
+                Find out more...
+            </div>
         </div>
     </div>
 </section>
