--- a/WebFinalApp/WebFinalApp/wwwroot/app.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/app.html
@@ -16,6 +16,7 @@
 
                 <div class="navbar__items__menu">
                     <a onclick="goTo('/index', 'index')" class="item--navbar--button">HOME</a>
+                    <a onclick="goTo('/order', 'order')" class="item--navbar--button">ORDER</a>
                     <a onclick="goTo('/gallery', 'gallery')" class="item--navbar--button">GALLERY</a>
                     <a onclick="goTo('/blogs', 'blogs')" class="item--navbar--button">BLOG</a>
                     <a onclick="goTo('/about', 'about')" class="item--navbar--button">ABOUT</a>
