Too many things...

--- a/WebFinalApp/WebFinalApp/wwwroot/order.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/order.html
@@ -31,7 +31,7 @@
                     <input class="order_input_elem" type="email" placeholder="Enter email..." id="email" name="email">
                     <textarea id="additional_info" class="order_input_elem" rows="5" cols="35" placeholder="Additional information..."></textarea>
                     <input type="submit" id="order_input_button" value="Submit order">
-                    <p id="order_submitted_text">Order submitted! Please wait for an answer from the chef.</p>
+                    <p id="order_submitted_text">Order submitted! Please check your email for the details.</p>
                 </div>
             </div>
         </div>
